Preparaçao de script de publicaçao de versao

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,12 +3,21 @@ on: [workflow_dispatch]
 
 jobs:
   build:
-    name: Publicar
+    name: Publish
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
         run: make build
-      - name: Criar Release
-        run: ls ./dist/
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body_path: ./dist/NOTAS_VERSAO.md
+          draft: true
+          prerelease: true
