--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         run: make build
+      - name: ls
+        run: ls -l
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
