--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,8 @@
 name: Publish Release
-on: [workflow_dispatch]
+on:
+  push:
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -16,7 +19,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github. }}
           release_name: Release ${{ github.ref }}
           body_path: dist/NOTAS_VERSAO.md
           draft: true
