--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,3 +24,14 @@ jobs:
           body_path: dist/NOTAS_VERSAO.md
           draft: false
           prerelease: true
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/mod-sei-pen-${{ github.ref }}.zip
+          asset_name: mod-sei-pen-${{ github.ref }}.zip
+          asset_content_type: application/zip          
