--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.tag_name }}
+          release_name: Release ${{ github.tag_name }}
           body_path: dist/NOTAS_VERSAO.md
           draft: false
           prerelease: true
@@ -32,6 +32,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/mod-sei-pen-${{ github.ref }}.zip
+          asset_path: dist/mod-sei-pen-${{ github.tag_name }}.zip
           asset_name: mod-sei-pen-${{ github.ref }}.zip
           asset_content_type: application/zip          
