--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,19 +19,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.tag_name }}
-          release_name: Release ${{ github.tag_name }}
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
           body_path: dist/NOTAS_VERSAO.md
           draft: false
           prerelease: true
 
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/mod-sei-pen-${{ github.tag_name }}.zip
-          asset_name: mod-sei-pen-${{ github.ref }}.zip
-          asset_content_type: application/zip          
+      # - name: Upload Release Asset
+      #   id: upload-release-asset 
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: dist/mod-sei-pen-${{ github.tag_name }}.zip
+      #     asset_name: mod-sei-pen-${{ github.ref }}.zip
+      #     asset_content_type: application/zip          
