--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,8 +11,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      
       - name: Build
         run: make build
+      
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        shell: bash
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -25,9 +32,6 @@ jobs:
           draft: false
           prerelease: true
 
-      - name: tag number
-        run : echo ${{ github.event.release.tag_name }}
-
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
@@ -35,6 +39,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/mod-sei-pen-${{ github.ref }}.zip
-          asset_name: mod-sei-pen-${{ github.ref }}.zip
+          asset_path: dist/mod-sei-pen-${{ steps.get_version.outputs.VERSION }}.zip
+          asset_name: mod-sei-pen-${{ steps.get_version.outputs.VERSION }}.zip
           asset_content_type: application/zip          
